CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

project(Probleme-Info-11G)

add_subdirectory("anagrame1")
add_subdirectory("aranjamente")
add_subdirectory("bila")
add_subdirectory("caractere")
add_subdirectory("cerc3")
add_subdirectory("cifregen")
add_subdirectory("cifregen1")
add_subdirectory("cifregen2")
add_subdirectory("cifregen3")
add_subdirectory("cifregen4")
add_subdirectory("combinari")
add_subdirectory("concert")
add_subdirectory("cuvant")
add_subdirectory("cuvinte1")
add_subdirectory("dublarevocale")
add_subdirectory("eliminare1")
add_subdirectory("eureni")
add_subdirectory("flici")
add_subdirectory("hercule")
add_subdirectory("intersectiesegmente")
add_subdirectory("intervale2")
add_subdirectory("intervale4")
add_subdirectory("kMax")
add_subdirectory("masini")
add_subdirectory("numarmaximcuvinte")
add_subdirectory("pachete")
add_subdirectory("partitiimultime")
add_subdirectory("partitiinumar")
add_subdirectory("partitiinumar1")
add_subdirectory("partitiinumar2")
add_subdirectory("permpf")
add_subdirectory("permrep")
add_subdirectory("permutarecuvant")
add_subdirectory("permutari")
add_subdirectory("permutari1")
add_subdirectory("permutari2")
add_subdirectory("produscartezian1")
add_subdirectory("produscartezian2")
add_subdirectory("proiecte")
add_subdirectory("reactivi")
add_subdirectory("regine1")
add_subdirectory("rucsac")
add_subdirectory("saritura_calului")
add_subdirectory("shuffle")
add_subdirectory("sirpie")
add_subdirectory("siruri")
add_subdirectory("soarece")
add_subdirectory("soarece1")
add_subdirectory("spectacole")
add_subdirectory("strazi")
add_subdirectory("submultimi")
add_subdirectory("subsecv")
add_subdirectory("summax")
add_subdirectory("traseucal")
add_subdirectory("traseucalmax")