CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

project(Probleme-Info-11G)

add_subdirectory("adiacenta")
add_subdirectory("adiacenta1")
add_subdirectory("afiscircuite")
add_subdirectory("anagrame1")
add_subdirectory("anunt")
add_subdirectory("aranjamente")
add_subdirectory("bete")
add_subdirectory("bfs")
add_subdirectory("bila")
add_subdirectory("bipartit2")
add_subdirectory("campion")
add_subdirectory("caractere")
add_subdirectory("cautarebinara")
add_subdirectory("cautaredivimp")
add_subdirectory("cerc3")
add_subdirectory("cifregen")
add_subdirectory("cifregen1")
add_subdirectory("cifregen2")
add_subdirectory("cifregen3")
add_subdirectory("cifregen4")
add_subdirectory("cladire")
add_subdirectory("cladire1")
add_subdirectory("cladire2")
add_subdirectory("cladire3")
add_subdirectory("cladire5")
add_subdirectory("cmmdc3")
add_subdirectory("cntimpare")
add_subdirectory("combinari")
add_subdirectory("comori")
add_subdirectory("componenteconexe")
add_subdirectory("componenteconexe1")
add_subdirectory("componenteconexe2")
add_subdirectory("componenteconexe3")
add_subdirectory("componenteconexe4")
add_subdirectory("concert")
add_subdirectory("conex")
add_subdirectory("cuvant")
add_subdirectory("cuvinte1")
add_subdirectory("dfs")
add_subdirectory("dublarevocale")
add_subdirectory("eliminare1")
add_subdirectory("epidemie")
add_subdirectory("eureni")
add_subdirectory("existaimparedivimp")
add_subdirectory("existaprimedivimp")
add_subdirectory("flici")
add_subdirectory("frunze")
add_subdirectory("gears")
add_subdirectory("grade")
add_subdirectory("grade2")
add_subdirectory("gradintnul")
add_subdirectory("gradmax")
add_subdirectory("graf_partial")
add_subdirectory("graf_partial_1")
add_subdirectory("graf_partial_2")
add_subdirectory("hercule")
add_subdirectory("inaltimiq")
add_subdirectory("infoarena")
add_subdirectory("intersectiesegmente")
add_subdirectory("intervale2")
add_subdirectory("intervale4")
add_subdirectory("izolate")
add_subdirectory("kMax")
add_subdirectory("ksort2")
add_subdirectory("lant")
add_subdirectory("lanturi1")
add_subdirectory("listavecini")
add_subdirectory("mall")
add_subdirectory("masini")
add_subdirectory("matrice_div_et_imp")
add_subdirectory("maxim6")
add_subdirectory("maxprim")
add_subdirectory("mergesort")
add_subdirectory("numarmaximcuvinte")
add_subdirectory("pachete")
add_subdirectory("partitiimultime")
add_subdirectory("partitiinumar")
add_subdirectory("partitiinumar1")
add_subdirectory("partitiinumar2")
add_subdirectory("partitiinumar4")
add_subdirectory("permpf")
add_subdirectory("permrep")
add_subdirectory("permutarecuvant")
add_subdirectory("permutari")
add_subdirectory("permutari1")
add_subdirectory("permutari2")
add_subdirectory("plopi1")
add_subdirectory("produscartezian1")
add_subdirectory("produscartezian2")
add_subdirectory("proiecte")
add_subdirectory("quicksort")
add_subdirectory("reactivi")
add_subdirectory("regine1")
add_subdirectory("rucsac")
add_subdirectory("saritura_calului")
add_subdirectory("sclm")
add_subdirectory("shuffle")
add_subdirectory("sirpie")
add_subdirectory("siruri")
add_subdirectory("soarece")
add_subdirectory("soarece1")
add_subdirectory("spectacole")
add_subdirectory("strazi")
add_subdirectory("subgraf")
add_subdirectory("subgraf1")
add_subdirectory("submultimi")
add_subdirectory("subsecv")
add_subdirectory("summax")
add_subdirectory("sumparevec")
add_subdirectory("sumtri")
add_subdirectory("sumtri1")
add_subdirectory("sumvec")
add_subdirectory("taxe")
add_subdirectory("traseucal")
add_subdirectory("traseucalmax")
add_subdirectory("trepte2")
add_subdirectory("verificareordonatdivimp")
add_subdirectory("veriflant")
add_subdirectory("verifnrparcifredivimp")
add_subdirectory("verifparedivimp")