CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set (CMAKE_CXX_STANDARD 14)

project(Probleme-Info-11G)

add_subdirectory("campion")
add_subdirectory("Clasa_11")
add_subdirectory("Clasa_12")
add_subdirectory("codeforces")
add_subdirectory("infoarena")
