CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)

project("infoarena")

add_subdirectory("atac")
add_subdirectory("asmax")
add_subdirectory("bemo")
add_subdirectory("capitala")
add_subdirectory("cautbin")
add_subdirectory("diametru")
add_subdirectory("dfs")
add_subdirectory("energii")
add_subdirectory("graf")
add_subdirectory("heapuri")
add_subdirectory("jap2")
add_subdirectory("jocul")
add_subdirectory("mexitate")
add_subdirectory("petrol")
add_subdirectory("plantatie")
add_subdirectory("rmq")
add_subdirectory("rucsac")
add_subdirectory("sortaret")
add_subdirectory("stramosi")
add_subdirectory("teatru")
add_subdirectory("tricolor")
add_subdirectory("trie")
